--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -5,8 +5,10 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Books</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+          integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
@@ -31,8 +33,10 @@
                         <td th:text="${book.title}"></td>
                         <td th:text="${book.year}"></td>
                         <td th:text="${book.author}"></td>
-                        <td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i class="fa fa-edit" style="font-size:20px"></i></a></td>
-                        <td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i class="fa fa-trash" style="font-size:20px"></i></a></td>
+                        <td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i
+                                class="fa fa-edit" style="font-size:20px"></i></a></td>
+                        <td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i
+                                class="fa fa-trash" style="font-size:20px"></i></a></td>
                     </tr>
                     </tbody>
                 </table>
@@ -40,38 +44,38 @@
             <p class="my-5"><a href="/books/add" class="btn btn-primary">Add book</a></p>
         </div>
     </div>
-</div>
 
-<nav aria-label="Pagination" th:if="${books.totalPages gt 0}">
-    <ul class="pagination justify-content-center font-weight-medium">
-        <li class="page-item" th:classappend="${books.number eq 0} ? 'disabled'">
-            <a class="page-link svg-icon"
-               th:href="@{/books?page={id}(id=${books.number lt 2 ? 1 : books.number})}"
-               aria-label="Previous"
-               title="Previous Page" rel="tooltip">
-                <i class="fas fa-chevron-left"></i>
-            </a>
-        </li>
-        <li class="page-item" th:classappend="${i eq books.number + 1} ? 'active'"
-            th:each="i : ${#numbers.sequence( books.number + 1, books.totalPages > 10 + books.number ? books.number + 10 : books.totalPages, 1)}">
-            <a class="page-link" th:href="@{/books?page={id}(id=${i})}" th:text="${i}"
-               th:title="${'Page '+ i}"
-               rel="tooltip"></a>
-        </li>
-        <li class="page-item disabled" th:if="${books.number + 10 < books.totalPages}">
-            <a class="page-link svg-icon" href="#">
-                <span data-feather="more-horizontal" width="20" height="20"></span>
-            </a>
-        </li>
-        <li class="page-item" th:classappend="${books.number + 1 eq books.totalPages} ? 'disabled'">
-            <a class="page-link svg-icon" th:href="@{/books?page={id}(id=${books.number + 2})}"
-               aria-label="Next"
-               title="Next Page" rel="tooltip">
-                <i class="fas fa-chevron-right"></i>
-            </a>
-        </li>
-    </ul>
-</nav>
+    <nav aria-label="Pagination" th:if="${books.totalPages gt 0}">
+        <ul class="pagination justify-content-center font-weight-medium">
+            <li class="page-item" th:classappend="${books.number eq 0} ? 'disabled'">
+                <a class="page-link svg-icon"
+                   th:href="@{/books?page={id}(id=${books.number lt 2 ? 1 : books.number})}"
+                   aria-label="Previous"
+                   title="Previous Page" rel="tooltip">
+                    <i class="fas fa-chevron-left"></i>
+                </a>
+            </li>
+            <li class="page-item" th:classappend="${i eq books.number + 1} ? 'active'"
+                th:each="i : ${#numbers.sequence( books.number + 1, books.totalPages > 10 + books.number ? books.number + 10 : books.totalPages, 1)}">
+                <a class="page-link" th:href="@{/books?page={id}(id=${i})}" th:text="${i}"
+                   th:title="${'Page '+ i}"
+                   rel="tooltip"></a>
+            </li>
+            <li class="page-item disabled" th:if="${books.number + 10 < books.totalPages}">
+                <a class="page-link svg-icon" href="#">
+                    <span data-feather="more-horizontal" width="20" height="20"></span>
+                </a>
+            </li>
+            <li class="page-item" th:classappend="${books.number + 1 eq books.totalPages} ? 'disabled'">
+                <a class="page-link svg-icon" th:href="@{/books?page={id}(id=${books.number + 2})}"
+                   aria-label="Next"
+                   title="Next Page" rel="tooltip">
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 </body>
 </html>
