--- a/src/main/resources/templates/orders/list.html
+++ b/src/main/resources/templates/orders/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Books</title>
+    <title>Orders</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -12,29 +12,33 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-<div th:switch="${books}" class="container my-5">
+<div th:switch="${orders}" class="container my-5">
     <div class="row justify-content-center font-weight-medium">
         <div class="col-md-6">
-            <h2 th:case="null">No books yet!</h2>
+            <h2 th:case="null">No orders yet!</h2>
             <div th:case="*">
-                <h2 class="my-5">Books</h2>
+                <h2 class="my-5">Orders</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
-                        <th>Title</th>
-                        <!--<th>Year</th>-->
-                        <th>Author</th>
+                        <th>Id</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                        <th>Reader</th>
                         <!--<th style="width: 5%">Edit</th>-->
                         <!--<th style="width: 5%">Delete</th>-->
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="book : ${books}">
+                    <tr th:each="order : ${orders}">
                         <td>
-                            <a th:href="@{/books/__${book.id}__/edit}" th:text="${book.title}"/></a>
+                            <a th:href="@{/orders/__${order.id}__}" th:text="${order.id}"/></a>
                         </td>
-                        <!--<td th:text="${book.year}"></td>-->
-                        <td th:text="${book.author}"></td>
+                        <!--<td th:text="${order.date}"></td>-->
+                        <td th:text="${#dates.format(order.date, 'dd-MM-yyyy HH:mm')}"></td>
+
+                        <td th:text="${order.orderStatus}"></td>
+                        <td th:text="${order.reader}"></td>
                         <!--<td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i-->
                                 <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
                         <!--<td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i-->
@@ -43,33 +47,33 @@
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a href="/books/add" class="btn btn-primary">Add book</a></p>
+            <p class="my-5"><a href="/orders/add" class="btn btn-primary">Add order</a></p>
         </div>
     </div>
 
-    <nav aria-label="Pagination" th:if="${books.totalPages gt 0}">
+    <nav aria-label="Pagination" th:if="${orders.totalPages gt 0}">
         <ul class="pagination justify-content-center font-weight-medium">
-            <li class="page-item" th:classappend="${books.number eq 0} ? 'disabled'">
+            <li class="page-item" th:classappend="${orders.number eq 0} ? 'disabled'">
                 <a class="page-link svg-icon"
-                   th:href="@{/books?page={id}(id=${books.number lt 2 ? 1 : books.number})}"
+                   th:href="@{/orders?page={id}(id=${orders.number lt 2 ? 1 : orders.number})}"
                    aria-label="Previous"
                    title="Previous Page" rel="tooltip">
                     <i class="fas fa-chevron-left"></i>
                 </a>
             </li>
-            <li class="page-item" th:classappend="${i eq books.number + 1} ? 'active'"
-                th:each="i : ${#numbers.sequence( books.number + 1, books.totalPages > 10 + books.number ? books.number + 10 : books.totalPages, 1)}">
-                <a class="page-link" th:href="@{/books?page={id}(id=${i})}" th:text="${i}"
+            <li class="page-item" th:classappend="${i eq orders.number + 1} ? 'active'"
+                th:each="i : ${#numbers.sequence( orders.number + 1, orders.totalPages > 10 + orders.number ? orders.number + 10 : orders.totalPages, 1)}">
+                <a class="page-link" th:href="@{/orders?page={id}(id=${i})}" th:text="${i}"
                    th:title="${'Page '+ i}"
                    rel="tooltip"></a>
             </li>
-            <li class="page-item disabled" th:if="${books.number + 10 < books.totalPages}">
+            <li class="page-item disabled" th:if="${orders.number + 10 < orders.totalPages}">
                 <a class="page-link svg-icon" href="#">
                     <span data-feather="more-horizontal" width="20" height="20"></span>
                 </a>
             </li>
-            <li class="page-item" th:classappend="${books.number + 1 eq books.totalPages} ? 'disabled'">
-                <a class="page-link svg-icon" th:href="@{/books?page={id}(id=${books.number + 2})}"
+            <li class="page-item" th:classappend="${orders.number + 1 eq orders.totalPages} ? 'disabled'">
+                <a class="page-link svg-icon" th:href="@{/orders?page={id}(id=${orders.number + 2})}"
                    aria-label="Next"
                    title="Next Page" rel="tooltip">
                     <i class="fas fa-chevron-right"></i>
