--- a/src/main/resources/templates/orders/orderDetails.html
+++ b/src/main/resources/templates/orders/orderDetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Author information</title>
+    <title>Add User</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -14,22 +14,30 @@
 <body>
 
 <div class="container my-5">
-    <h2 class="mb-5">Author information</h2>
+    <h2 class="mb-5">Order information</h2>
     <div class="row">
         <div class="col-md-6">
-            <table class="table table-striped table-responsive-md" th:object="${author}">
+            <table class="table table-striped table-responsive-md" th:object="${bookOrder}">
                 <tr>
-                    <td>Name</td>
-                    <td th:text="*{name}"></td>
+                    <td>Date</td>
+                    <td th:text="${#dates.format(bookOrder.date, 'dd-MM-yyyy HH:mm')}"></td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td th:text="*{orderStatus}"></td>
+                </tr>
+                <tr>
+                    <td>Reader</td>
+                    <td th:text="*{reader}"></td>
                 </tr>
             </table>
 
-            <p class="my-5"><a th:href="@{{id}/edit(id=${author.id})}" class="btn btn-primary">Edit author</a></p>
+            <p class="my-5"><a th:href="@{{id}/edit(id=${bookOrder.id})}" class="btn btn-primary">Edit order</a></p>
 
         </div>
     </div>
 
-    <div th:switch="${author.books}">
+    <div th:switch="${bookOrder.books}">
         <div class="row">
             <div class="col-md-6">
                 <h4>Books</h4>
@@ -43,13 +51,13 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="book : ${author.books}">
+                    <tr th:each="book : ${bookOrder.books}">
                         <td th:text="${book.title}"></td>
                         <!--<td th:text="${book.author}"></td>-->
                         <!--<td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
+                        <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
                         <!--<td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
+                        <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
                     </tr>
                     </tbody>
                 </table>
@@ -59,6 +67,5 @@
     </div>
 
 </div>
-
 </body>
 </html>
