--- a/src/main/resources/templates/readers/list.html
+++ b/src/main/resources/templates/readers/list.html
@@ -12,64 +12,54 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-<div th:switch="${books}" class="container my-5">
+<div th:switch="${readers}" class="container my-5">
     <div class="row justify-content-center font-weight-medium">
         <div class="col-md-6">
-            <h2 th:case="null">No books yet!</h2>
+            <h2 th:case="null">No readers yet!</h2>
             <div th:case="*">
-                <h2 class="my-5">Books</h2>
+                <h2 class="my-5">Readers</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
-                        <th>Title</th>
-                        <!--<th>Year</th>-->
-                        <th>Author</th>
-                        <!--<th style="width: 5%">Edit</th>-->
-                        <!--<th style="width: 5%">Delete</th>-->
+                        <th>Name</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="book : ${books}">
+                    <tr th:each="reader : ${readers}">
                         <td>
-                            <a th:href="@{/books/__${book.id}__/edit}" th:text="${book.title}"/></a>
+                            <a th:href="@{/readers/__${reader.id}__/edit}" th:text="${reader.Name}"/></a>
                         </td>
-                        <!--<td th:text="${book.year}"></td>-->
-                        <td th:text="${book.author}"></td>
-                        <!--<td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
-                        <!--<td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
                     </tr>
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a href="/books/add" class="btn btn-primary">Add book</a></p>
+            <p class="my-5"><a href="/readers/add" class="btn btn-primary">Add reader</a></p>
         </div>
     </div>
 
-    <nav aria-label="Pagination" th:if="${books.totalPages gt 0}">
+    <nav aria-label="Pagination" th:if="${readers.totalPages gt 0}">
         <ul class="pagination justify-content-center font-weight-medium">
-            <li class="page-item" th:classappend="${books.number eq 0} ? 'disabled'">
+            <li class="page-item" th:classappend="${readers.number eq 0} ? 'disabled'">
                 <a class="page-link svg-icon"
-                   th:href="@{/books?page={id}(id=${books.number lt 2 ? 1 : books.number})}"
+                   th:href="@{/readers?page={id}(id=${readers.number lt 2 ? 1 : readers.number})}"
                    aria-label="Previous"
                    title="Previous Page" rel="tooltip">
                     <i class="fas fa-chevron-left"></i>
                 </a>
             </li>
-            <li class="page-item" th:classappend="${i eq books.number + 1} ? 'active'"
-                th:each="i : ${#numbers.sequence( books.number + 1, books.totalPages > 10 + books.number ? books.number + 10 : books.totalPages, 1)}">
-                <a class="page-link" th:href="@{/books?page={id}(id=${i})}" th:text="${i}"
+            <li class="page-item" th:classappend="${i eq readers.number + 1} ? 'active'"
+                th:each="i : ${#numbers.sequence( readers.number + 1, readers.totalPages > 10 + readers.number ? readers.number + 10 : readers.totalPages, 1)}">
+                <a class="page-link" th:href="@{/readers?page={id}(id=${i})}" th:text="${i}"
                    th:title="${'Page '+ i}"
                    rel="tooltip"></a>
             </li>
-            <li class="page-item disabled" th:if="${books.number + 10 < books.totalPages}">
+            <li class="page-item disabled" th:if="${readers.number + 10 < readers.totalPages}">
                 <a class="page-link svg-icon" href="#">
                     <span data-feather="more-horizontal" width="20" height="20"></span>
                 </a>
             </li>
-            <li class="page-item" th:classappend="${books.number + 1 eq books.totalPages} ? 'disabled'">
-                <a class="page-link svg-icon" th:href="@{/books?page={id}(id=${books.number + 2})}"
+            <li class="page-item" th:classappend="${readers.number + 1 eq readers.totalPages} ? 'disabled'">
+                <a class="page-link svg-icon" th:href="@{/readers?page={id}(id=${readers.number + 2})}"
                    aria-label="Next"
                    title="Next Page" rel="tooltip">
                     <i class="fas fa-chevron-right"></i>
