--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+<div th:insert="fragments/header :: header"></div>
 <div th:switch="${books}" class="container my-5">
     <div class="row justify-content-center font-weight-medium">
         <div class="col-md-6">
