--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+<div th:insert="fragments/header :: header"></div>
 <div class="row justify-content-center font-weight-medium">
 <h2 class="my-5">Welcome</h2>
 </div>
