--- a/src/main/resources/templates/authors/update.html
+++ b/src/main/resources/templates/authors/update.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+<div th:insert="fragments/header :: header"></div>
 <div class="container my-5">
     <h2 class="mb-5">Update author</h2>
     <div class="row">
