--- a/src/main/resources/templates/books/update.html
+++ b/src/main/resources/templates/books/update.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-
+<div th:insert="fragments/header :: header"></div>
 <div class="container my-5">
     <h2 class="mb-5">Book</h2>
     <div class="row">
