--- a/src/main/resources/templates/orders/add.html
+++ b/src/main/resources/templates/orders/add.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
+<div th:insert="fragments/header :: header"></div>
 <div class="container my-5">
     <h2 class="mb-5">New order</h2>
     <div class="row">
