--- a/src/main/resources/templates/orders/order.html
+++ b/src/main/resources/templates/orders/order.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Add User</title>
+    <title>Order</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -14,21 +14,21 @@
 <body>
 <div th:insert="fragments/header :: header"></div>
 <div class="container my-5">
-    <h2 class="mb-5">New order</h2>
+    <h2 class="mb-5">Order</h2>
     <div class="row">
         <div class="col-md-6">
-            <form action="#" th:action="@{/orders/add}" th:object="${bookOrder}" method="post">
+            <form action="#" th:action="@{/orders/save}" th:object="${bookOrder}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
-                        <!--<label for="date" class="col-form-label">Date</label>-->
-                        <!--<input type="text" th:field="${{bookOrder.date}}" class="form-control" id="date" placeholder="Date">-->
-                        <!--<span th:if="${#fields.hasErrors('date')}" th:errors="*{date}" class="text-danger"></span>-->
-                        <!--<label for="reader" class="col-form-label">Reader</label>-->
-                        <!--<input type="text" th:field="*{reader}" class="form-control" id="reader" placeholder="Reader">-->
-                        <!--<span th:if="${#fields.hasErrors('reader')}" th:errors="*{reader}" class="text-danger"></span>-->
+                        <input type="hidden" th:field="*{id}">
+
+                        <label class="col-form-label">Date</label>
+                        <p th:text="${#dates.format(bookOrder.date, 'dd-MM-yyyy HH:mm')}" class="form-control"
+                           style="margin-bottom: 0px;"></p>
 
                         <label for="orderStatus" class="col-form-label">Status</label>
-                        <select class="form-control" th:field="${bookOrder.orderStatus}" id="orderStatus" placeholder="Status">
+                        <select class="form-control" th:field="${bookOrder.orderStatus}" id="orderStatus"
+                                placeholder="Status">
                             <option th:each="status : ${T(com.kostenko.elibrary.models.OrderStatus).values()}"
                                     th:value="${status}"
                                     th:text="${status}">
@@ -44,11 +44,36 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 mt-5">
-                        <input type="submit" class="btn btn-primary" value="Add order">
+                    <div class="col-md-6 mt-3">
+                        <input type="submit" class="btn btn-primary" value="Save order">
                     </div>
                 </div>
             </form>
+            <div th:if="${bookOrder.id != null}">
+                <div class="row">
+                    <div class="col-md-6 mt-5">
+                        <h4>Lines</h4>
+                        <table class="table table-striped table-responsive-md">
+                            <thead>
+                            <tr>
+                                <th>Name</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="bookOrderLine : ${bookOrder.bookOrderLines}">
+                                <td>
+                                    <a th:href="@{/orders/__${bookOrder.id}__/lines/__${bookOrderLine.id}__}"
+                                       th:text="${bookOrderLine.toString()}"></a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <p class="my-3"><a th:href="@{/orders/{id}/lines/add(id=${bookOrder.id})}"
+                                           class="btn btn-primary">Add line</a></p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
