--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -19,6 +19,12 @@
             <h2 th:case="null">No books yet!</h2>
             <div th:case="*">
                 <h2 class="my-5">Books</h2>
+                <div class="my-4">
+                    <form method="get" action="/books">
+                        <input class="form-control col-md-6" type="search" name="search" placeholder="Search">
+<!--                        <button class="btn btn-primary mb-2" type="submit">Search</button>-->
+                    </form>
+                </div>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
