--- a/src/main/resources/templates/orders/line.html
+++ b/src/main/resources/templates/orders/line.html
@@ -23,19 +23,20 @@
                         <input type="hidden" th:field="*{id}">
                         <input type="hidden" th:field="*{bookOrder}">
 
-                        <label for="book" class="col-form-label">Book</label>
-                        <select class="form-control" th:field="*{book}" id="book">
-                            <option value="0"></option>
-                            <option th:each="book : ${books}" th:value="${book.id}"
-                                    th:text="${book.title}"></option>
-                        </select>
+                        <!--<label for="book" class="col-form-label">Book</label>-->
+                        <!--<select class="form-control" th:field="*{book}" id="book">-->
+                            <!--<option value="0"></option>-->
+                            <!--<option th:each="book : ${books}" th:value="${book.id}"-->
+                                    <!--th:text="${book.title}"></option>-->
+                        <!--</select>-->
 
                         <label for="series" class="col-form-label">Series</label>
                         <select class="form-control" th:field="*{series}" id="series">
                             <option value="0"></option>
                             <option th:each="series : ${listSeries}" th:value="${series.id}"
-                                    th:text="${series.name}"></option>
+                                    th:text="${series}"></option>
                         </select>
+                        <span th:if="${#fields.hasErrors('series')}" th:errors="*{series}" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col-md-6 mt-5">
