--- a/src/main/resources/templates/books/series.html
+++ b/src/main/resources/templates/books/series.html
@@ -31,12 +31,12 @@
                         <!--<input type="checkbox" name="inStock" class="form-check-input" id="inStock" th:checked="*{inStock}" />-->
                     </div>
                     <!--<div class="form-group">-->
-                        <!--<div class="form-check">-->
-                            <!--<input class="form-check-input" type="checkbox" id="gridCheck">-->
-                            <!--<label class="form-check-label" for="gridCheck">-->
-                                <!--Check me out-->
-                            <!--</label>-->
-                        <!--</div>-->
+                    <!--<div class="form-check">-->
+                    <!--<input class="form-check-input" type="checkbox" id="gridCheck">-->
+                    <!--<label class="form-check-label" for="gridCheck">-->
+                    <!--Check me out-->
+                    <!--</label>-->
+                    <!--</div>-->
                     <!--</div>-->
                 </div>
                 <div class="custom-control custom-checkbox">
@@ -49,8 +49,35 @@
                     </div>
                 </div>
             </form>
+            <div th:if="${series.id != null}">
+                <div class="row">
+                    <div class="col-md-6 mt-5">
+                        <h2 class="my-5">Orders</h2>
+                        <table class="table table-striped table-responsive-md" style="width: 500px">
+                            <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Date</th>
+                                <th>Status</th>
+                                <th>Deadline</th>
+                                <th>Reader</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="order : ${orders}">
+                                <td>
+                                    <a th:href="@{/orders/__${order.id}__}" th:text="${order.id}"/></a>
+                                </td>
+                                <td th:text="${#dates.format(order.date, 'dd.MM.yyyy HH:mm')}"></td>
+                                <td th:text="${order.orderStatus}"></td>
+                                <td th:text="${#dates.format(order.deadline, 'dd.MM.yyyy')}"></td>
+                                <td th:text="${order.reader}"></td>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
