--- a/src/main/resources/templates/orders/line.html
+++ b/src/main/resources/templates/orders/line.html
@@ -20,6 +20,8 @@
             <form action="#" th:action="@{/orders/{orderId}/lines/save(orderId=${orderId})}" th:object="${bookOrderLine}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
+                        <div class="text-danger" th:if="${message}" th:text="${message}"/>
+
                         <input type="hidden" th:field="*{id}">
                         <input type="hidden" th:field="*{bookOrder}">
 
