--- a/src/main/resources/templates/orders/list.html
+++ b/src/main/resources/templates/orders/list.html
@@ -19,12 +19,24 @@
             <h2 th:case="null">No orders yet!</h2>
             <div th:case="*">
                 <h2 class="my-5">Orders</h2>
+
+                <form action="/orders" method="get">
+
+                    <div class="my-3">
+                        <label class="col-form-label">Deadline</label>
+                        <input type="date" name="deadline" th:value="${#dates.format(deadline, 'dd.MM.yyyy')}" class="form-control-inline"
+                               placeholder="Deadline" forma>
+                        <button type="submit" class="btn btn-primary">Filter</button>
+                    </div>
+                </form>
+
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
                         <th>Id</th>
                         <th>Date</th>
                         <th>Status</th>
+                        <th>Deadline</th>
                         <th>Reader</th>
                         <!--<th style="width: 5%">Edit</th>-->
                         <!--<th style="width: 5%">Delete</th>-->
@@ -36,14 +48,14 @@
                             <a th:href="@{/orders/__${order.id}__}" th:text="${order.id}"/></a>
                         </td>
                         <!--<td th:text="${order.date}"></td>-->
-                        <td th:text="${#dates.format(order.date, 'dd-MM-yyyy HH:mm')}"></td>
-
+                        <td th:text="${#dates.format(order.date, 'dd.MM.yyyy HH:mm')}"></td>
                         <td th:text="${order.orderStatus}"></td>
+                        <td th:text="${#dates.format(order.deadline, 'dd.MM.yyyy')}"></td>
                         <td th:text="${order.reader}"></td>
                         <!--<td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
+                        <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
                         <!--<td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
+                        <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
                     </tr>
                     </tbody>
                 </table>
