--- a/src/main/resources/templates/orders/order.html
+++ b/src/main/resources/templates/orders/order.html
@@ -20,7 +20,10 @@
             <form action="#" th:action="@{/orders/save}" th:object="${bookOrder}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
+                        <div class="text-danger" th:if="${message}" th:text="${message}"/>
+
                         <input type="hidden" th:field="*{id}">
+                        <input type="hidden" th:field="${bookOrder.bookOrderLines}">
 
                         <div th:if="${bookOrder.id != null}">
                             <label class="col-form-label">Date</label>
@@ -53,32 +56,36 @@
                         <input type="submit" class="btn btn-primary" value="Save order">
                     </div>
                 </div>
-            </form>
-            <div th:if="${bookOrder.id != null}">
-                <div class="row">
-                    <div class="col-md-6 mt-5">
-                        <h4>Lines</h4>
-                        <table class="table table-striped table-responsive-md">
-                            <thead>
-                            <tr>
-                                <th>Name</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="bookOrderLine : ${bookOrder.bookOrderLines}">
-                                <td>
-                                    <a th:href="@{/orders/__${bookOrder.id}__/lines/__${bookOrderLine.id}__}"
-                                       th:text="${bookOrderLine.series}"></a>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                        <p class="my-3"><a th:href="@{/orders/{id}/lines/add(id=${bookOrder.id})}"
-                                           class="btn btn-primary">Add line</a></p>
+                <div th:if="${bookOrder.id != null}">
+                    <div class="row">
+                        <div class="col-md-6 mt-5">
+                            <h4>Lines</h4>
+                            <table class="table table-striped table-responsive-md">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th style="width: 5%">Delete</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:each="bookOrderLine : ${bookOrder.bookOrderLines}">
+                                    <td>
+                                        <a th:href="@{/orders/__${bookOrder.id}__/lines/__${bookOrderLine.id}__}"
+                                           th:text="${bookOrderLine.series}"></a>
+                                    </td>
+                                    <td style="text-align: center"><a
+                                            th:href="@{'/orders/{orderId}/lines/{lineId}/delete'
+                                            (orderId=${bookOrder.id}, lineId=${bookOrderLine.id})}">
+                                        <i class="fa fa-trash" style="font-size:20px"></i></a></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <p class="my-3"><a th:href="@{/orders/{id}/lines/add(id=${bookOrder.id})}"
+                                               class="btn btn-primary">Add line</a></p>
+                        </div>
                     </div>
                 </div>
-            </div>
-
+            </form>
         </div>
     </div>
 </div>
