Added validation when issuing books to the reader who did not return the previous order.

--- a/src/main/resources/templates/authors/author.html
+++ b/src/main/resources/templates/authors/author.html
@@ -46,7 +46,10 @@
                                 </thead>
                                 <tbody>
                                 <tr th:each="book : ${author.books}">
-                                    <td th:text="${book.title}"></td>
+                                    <td>
+                                        <a th:href="@{/books/__${book.id}__}"
+                                           th:text="${book}"></a>
+                                    </td>
                                 </tr>
                                 </tbody>
                             </table>
