--- a/src/main/resources/templates/books/book.html
+++ b/src/main/resources/templates/books/book.html
@@ -21,6 +21,7 @@
                 <div class="row">
                     <div class="form-group col-md-6">
                         <input type="hidden" th:field="*{id}">
+                        <input type="hidden" th:field="*{series}">
 
                         <label for="title" class="col-form-label">Title</label>
                         <input type="text" th:field="*{title}" class="form-control" id="title" placeholder="Title">
