--- a/src/main/resources/templates/books/series.html
+++ b/src/main/resources/templates/books/series.html
@@ -24,7 +24,7 @@
                         <input type="hidden" th:field="*{book}" class="form-control" id="book">
 
                         <label for="title" class="col-form-label">Name</label>
-                        <input type="text" th:field="*{name}" class="form-control" id="title" placeholder="Title">
+                        <input type="text" th:field="*{name}" class="form-control" id="title" placeholder="Name">
                         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="text-danger"></span>
 
                         <!--<label for="inStock" class="col-form-label">In stock</label>-->
