--- a/src/main/resources/templates/authors/list.html
+++ b/src/main/resources/templates/authors/list.html
@@ -23,8 +23,7 @@
                     <thead>
                     <tr>
                         <th>Name</th>
-                        <!--<th style="width: 5%">Edit</th>
-                        <th style="width: 5%">Delete</th>-->
+                        <th style="width: 30%">Number of books</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -32,11 +31,7 @@
                         <td>
                             <a th:href="@{/authors/__${author.id}__}" th:text="${author.name}"/></a>
                         </td>
-                        <!--<td th:text="${author.name}"></td>
-                        <td style="text-align: center"><a th:href="@{'/authors/update/{id}'(id=${author.id})}"><i
-                                class="fa fa-edit" style="font-size:20px"></i></a></td>
-                        <td style="text-align: center"><a th:href="@{'/authors/delete/{id}'(id=${author.id})}"><i
-                                class="fa fa-trash" style="font-size:20px"></i></a></td>-->
+                        <td style="text-align: center" th:text="${author.getNumberOfBooks()}"></td>
                     </tr>
                     </tbody>
                 </table>
