--- a/src/main/resources/templates/books/list.html
+++ b/src/main/resources/templates/books/list.html
@@ -22,17 +22,14 @@
                 <div class="my-4">
                     <form method="get" action="/books">
                         <input class="form-control col-md-6" type="search" name="search" placeholder="Search">
-<!--                        <button class="btn btn-primary mb-2" type="submit">Search</button>-->
                     </form>
                 </div>
                 <table class="table table-striped table-responsive-md">
                     <thead>
                     <tr>
                         <th>Title</th>
-                        <!--<th>Year</th>-->
                         <th>Author</th>
-                        <!--<th style="width: 5%">Edit</th>-->
-                        <!--<th style="width: 5%">Delete</th>-->
+                        <th style="width: 30%">Number of series</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -40,12 +37,8 @@
                         <td>
                             <a th:href="@{/books/__${book.id}__}" th:text="${book.title}"/></a>
                         </td>
-                        <!--<td th:text="${book.year}"></td>-->
                         <td th:text="${book.author}"></td>
-                        <!--<td style="text-align: center"><a th:href="@{'/books/update/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-edit" style="font-size:20px"></i></a></td>-->
-                        <!--<td style="text-align: center"><a th:href="@{'/books/delete/{id}'(id=${book.id})}"><i-->
-                                <!--class="fa fa-trash" style="font-size:20px"></i></a></td>-->
+                        <td style="text-align: center" th:text="${book.getNumberOfSeries()}"></td>
                     </tr>
                     </tbody>
                 </table>
